--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,9 +47,7 @@ tui-textarea = "^0.4.0"
 bat = "0.24.0"
 tui-logger = "0.11.1"
 grep-printer = "0.2.1"
-redux-rs = { git = "https://github.com/redux-rs/redux-rs", features = [
-    "middleware_thunk",
-] }
+redux-rs = { version = "0.3.3", features = ["middleware_thunk"] }
 simple-logging = "2.0.2"
 regex = "1.10.5"
 async-trait = "0.1.80"
