--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "serpl"
-version = "0.1.0"
+version = "0.1.2"
 edition = "2021"
 description = "VS Code like search and replace TUI"
 repository = "https://github.com/yassinebridi/serpl"
 authors = ["Yassine Bridi <ybridi@gmail.com>"]
 build = "build.rs"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
