fix clash between keymaps and help dialog

--- a/.config/config.json5
+++ b/.config/config.json5
@@ -7,6 +7,6 @@
     "<Tab>": "LoopOverTabs",
     "<Backtab>": "BackLoopOverTabs",
     "<Ctrl-o>": "ProcessReplace",
-    "<Ctrl-u>": "ShowHelp",
+    "<Ctrl-b>": "ShowHelp",
   }
 }
