--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "serpl"
-version = "0.1.34"
+version = "0.2.0"
 edition = "2021"
 description = "A simple terminal UI for search and replace, ala VS Code"
 repository = "https://github.com/yassinebridi/serpl"
@@ -8,8 +8,9 @@ authors = ["Yassine Bridi <ybridi@gmail.com>"]
 build = "build.rs"
 license = "MIT"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
+[features]
+ast_grep = []
+ 
 [dependencies]
 better-panic = "0.3.0"
 clap = { version = "4.5.7", features = [
