--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ clap = { version = "4.5.7", features = [
 ] }
 color-eyre = "0.6.3"
 config = "0.14.0"
-crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
+crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
 derive_deref = "1.1.1"
 etcetera = "0.8.0"
 futures = "0.3.30"
@@ -33,7 +33,7 @@ lazy_static = "1.4.0"
 libc = "0.2.155"
 log = "0.4.21"
 pretty_assertions = "1.4.0"
-ratatui = { version = "0.26.3", features = ["serde", "macros"] }
+ratatui = { version = "0.29.0", features = ["serde", "macros"] }
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
 signal-hook = "0.3.17"
@@ -44,12 +44,19 @@ tokio-util = "0.7.11"
 tracing = "0.1.40"
 tracing-error = "0.2.0"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
-tui-input = "^0.8.0"
+tui-input = "^0.11.1"
 redux-rs = { version = "0.3.3", features = ["middleware_thunk"] }
 simple-logging = "2.0.2"
 regex = "1.10.5"
 async-trait = "0.1.80"
 anyhow = "1.0.86"
+
+[target.'cfg(target_os = "macos")'.dependencies]
+crossterm = { version = "0.28.1", features = [
+  "event-stream",
+  "use-dev-tty",
+  "libc",
+] }
 
 [build-dependencies]
 vergen = { version = "8.3.1", features = ["build", "git", "gitoxide", "cargo"] }
