--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ anyhow = "1.0.86"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 crossterm = { version = "0.28.1", features = [
+  "serde",
   "event-stream",
   "use-dev-tty",
   "libc",
