fix redux-rs version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ tracing = "0.1.40"
 tracing-error = "0.2.0"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
 tui-input = "^0.11.1"
-redux-rs = { version = "0.3.3", features = ["middleware_thunk"] }
+redux-rs = { version = "=0.3.3", features = ["middleware_thunk"] }
 simple-logging = "2.0.2"
 regex = "1.10.5"
 async-trait = "0.1.80"
