--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -19,20 +19,20 @@ jobs:
       - name: Run tests
         run: cargo test --all-features --workspace
 
-  clippy:
-    name: Clippy
-    runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, 'Bump version to ')"
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@nightly
-        with:
-          components: clippy
-      - uses: Swatinem/rust-cache@v2
-      - name: Clippy check
-        run: cargo clippy --all-targets --all-features --workspace -- -D warnings
+  # clippy:
+  #   name: Clippy
+  #   runs-on: ubuntu-latest
+  #   if: "!contains(github.event.head_commit.message, 'Bump version to ')"
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v4
+  #     - name: Install Rust toolchain
+  #       uses: dtolnay/rust-toolchain@nightly
+  #       with:
+  #         components: clippy
+  #     - uses: Swatinem/rust-cache@v2
+  #     - name: Clippy check
+  #       run: cargo clippy --all-targets --all-features --workspace -- -D warnings
 
   docs:
     name: Docs
@@ -52,7 +52,7 @@ jobs:
   bump-version:
     name: Bump Version
     runs-on: ubuntu-latest
-    needs: [test, clippy, docs]
+    needs: [test, docs]
     if: "!contains(github.event.head_commit.message, 'Bump version to ')"
     steps:
       - name: Checkout repository
